# numbersid

./: CMakeLists.txt  LICENSE  README.md  fips.yml
.github/workflows/: static.yml
examples/sokol/: CMakeLists.txt  c64-sequencer-ui-impl.cc  c64_sequencer.c  rick.c  ui_preview.h  ui_sequencer.h
fips-files/configs/: wasm-ninja-debug.yml  wasm-ninja-release.yml  wasm-vscode-debug.yml  wasm-vscode-release.yml
fips-files/verbs/: vic20-via-tests.py
help/: help.txt
lamefft/: CMakeLists.txt  lamefft.cpp  lamefft.h
source/: CMakeLists.txt
source/numbersid/: CMakeLists.txt  numbersid-ui-impl.cc  numbersid.c  sequencer.h  ui_arrays.h  ui_data.h  ui_help.h  ui_numbersid.h  ui_parameters.h  ui_preview.h  ui_sequencer.h  ui_soundcontrol.h  ui_timecontrol.h  ui_variables.h
source/sokol/: CMakeLists.txt  c64_sequencer.c  numbersid-ui-impl.cc  numbersid.c  sequencer.h  ui_c64_sequencer.h  ui_numbersid.h  ui_preview.h  ui_sequencer.h
web-deploy/: index.html  numbersid.js  numbersid.wasm
web-deploy/help/: help.txt
